acl (2.2.53-7) UNRELEASED; urgency=medium

  * Properly link statically the autopkgtest testing the library linkage.
  * Add files not being installed to debian/not-installed.
  * Switch to debhelper compatibility level 13.
  * Switch to default dh_makeshlibs behavior instead of passing -V.
  * Switch to dh sequencer.

 -- Guillem Jover <guillem@debian.org>  Wed, 22 Apr 2020 01:49:41 +0200

acl (2.2.53-6) unstable; urgency=medium

  * Redirect stderr to stdout globally in autopkgtests instead of doing
    that per command.
  * Enable set -x and -u in autopkgtests.
  * Add support for cross-compilation to autopkgtests. Closes: #947048
  * Update upstream email address. Closes: #949688
  * Fix usage of uninitialized variable in getfacl. Closes: #612599
    Thanks to Vasily Gurevich <vas.gurevich@gmail.com>.
  * Switch to Standards-Version 4.5.0 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Sun, 01 Mar 2020 02:06:51 +0100

acl (2.2.53-5) unstable; urgency=medium

  * Switch to debhelper-compat (= 12) in Build-Depends from debian/compat.
  * Switch to Standards-Version 4.4.0 (no changes needed).
  * Update French translation. Closes: #931274
    Thanks to Jean-Philippe MENGUAL <jpmengual@debian.org>.
  * Fix cross-compilation for musl-based systems by bumping the minimum
    required gettext version to the one that stopped checking for internal
    GNU gettext symbols, which musl does not provide.

 -- Guillem Jover <guillem@debian.org>  Tue, 24 Sep 2019 15:23:30 +0200

acl (2.2.53-4) unstable; urgency=medium

  * Replace gettext with autopoint in autopkgtest Depends fields.

 -- Guillem Jover <guillem@debian.org>  Fri, 01 Mar 2019 23:22:21 +0100

acl (2.2.53-3) unstable; urgency=medium

  * Run «autoreconf -f -i» in autopkgtests to handle modified build system
    sources due to patching, triggering regeneration of the build system,
    and failing because the exact tool versions are not available.
